Setting up breakpoint variables and breaking out Header MQs

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,2 +1,11 @@
 // Colours
 $text-color: #0f4b57;
+
+// Breakpoints
+$xl-desktop: 1600px;
+$l-desktop: 1440px;
+$desktop: 1024px;
+$tablet: 800px;
+$l-mobile: 540px;
+$mobile: 420px;
+$s-mobile: 320px;
