MInor variable name fix

--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -54,7 +54,7 @@ nav {
   }
 }
 
-@media only screen and (max-width: $xl-screen) {
+@media only screen and (max-width: $xl-desktop) {
   // header
   header {
     img {
