--- a/src/styles/partials/_projectsSection.scss
+++ b/src/styles/partials/_projectsSection.scss
@@ -100,3 +100,118 @@
     left: 50%;
   }
 }
+
+// MEDIA QUERIES //
+
+@media only screen and (max-width: $xl-desktop) {
+  .projects {
+    h2 {
+      font-size: 3.5rem;
+    }
+
+    .project {
+      height: 70vh;
+    }
+  }
+
+  .projectInfo {
+    h3 {
+      font-size: 3rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $l-desktop) {
+  .projects {
+    h2 {
+      font-size: 3rem;
+      margin-bottom: 5rem;
+    }
+
+    .project {
+      height: 60vh;
+    }
+  }
+
+  .projectInfo {
+    h3 {
+      font-size: 2.5rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $desktop) {
+  .projects {
+    h2 {
+      margin: 1rem 0 4rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $tablet) {
+  .projects {
+    h2 {
+      font-size: 2rem;
+      margin: 0 0 3rem;
+    }
+
+    .project {
+      height: 40vh;
+    }
+  }
+
+  .projectInfo {
+    h3 {
+      font-size: 1.7rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $l-mobile) {
+  .projects {
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 2rem;
+    }
+
+    .project {
+      height: 55vh;
+    }
+  }
+
+  .project {
+    @include flexbox(column-reverse);
+    justify-content: space-evenly;
+
+    img,
+    .imgLink {
+      width: 100%;
+      height: 75%;
+    }
+
+    .imgLink {
+      top: auto;
+      bottom: 0;
+    }
+
+    .projectInfo {
+      width: 100%;
+      flex: 1;
+    }
+  }
+
+  .projectReversed .imgLink {
+    left: 0;
+  }
+
+  .projectInfo {
+    h3 {
+      font-size: 1.2rem;
+      margin: 0 0.8rem;
+    }
+  }
+
+  .project:last-child {
+    border-bottom: 1px solid rgba($text-color, 0.6);
+  }
+}
