--- a/src/styles/partials/_contacts.scss
+++ b/src/styles/partials/_contacts.scss
@@ -34,10 +34,87 @@
     }
 
     &:hover {
-      // box-shadow: none;
       box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.2);
 
       transition: box-shadow 0.5s ease;
+    }
+  }
+}
+
+@media only screen and (max-width: $xl-desktop) {
+  .contact {
+    h2 {
+      font-size: 2.7rem;
+    }
+
+    .contact-links {
+      width: 100%;
+    }
+
+    a {
+      font-size: 1.3rem;
+      margin-right: 1rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $l-desktop) {
+  .contact {
+    h2 {
+      font-size: 2.6rem;
+    }
+
+    a {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $desktop) {
+  .contact {
+    .contact-links {
+      width: 90%;
+    }
+
+    a {
+      font-size: 1.25rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $tablet) {
+  .contact {
+    h2 {
+      font-size: 2rem;
+    }
+  }
+
+  .contact-links {
+    flex-direction: column;
+
+    a {
+      margin: 0.5rem 0;
+      font-size: 1.2rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $l-mobile) {
+  .contact {
+    h2 {
+      font-size: 1.5rem;
+    }
+
+    a {
+      font-size: 1rem;
+    }
+  }
+}
+
+@media only screen and (max-width: $mobile) {
+  .contact {
+    a {
+      font-size: 0.9rem;
     }
   }
 }
